=== HEAD

* Add Dataset#for_update as a standard dataset method (jeremyevans)

* Add composition plugin, simlar to ActiveRecord's composed_of (jeremyevans)

* Combine multiple complex expressions for simpler SQL and object tree (jeremyevans)

* Add Dataset#first_source_table, for the unaliased version of the table for the first source (jeremyevans)

* Raise a more explicit error if attempting to use the sqlite adapter with sqlite3 instead of sqlite3-ruby (jeremyevans)

=== 3.9.0 (2010-03-04)

* Allow loading adapters and extensions from outside of the Sequel lib directory (jeremyevans)

* Make limit and offset work as bound variables in prepared statements (jeremyevans)

* In the single_table_inheritance plugin, handle case where the sti_key is nil or '' specially (jeremyevans) (#287)

* Handle IN/NOT IN with an empty array (jeremyevans)

* Emulate IN/NOT IN with multiple columns where the database doesn't support it and a dataset is given (jeremyevans)

* Add Dataset#unused_table_alias, for generating a table alias that has not yet been used in the query (jeremyevans)

* Support an empty database argument in bin/sequel, useful for testing things without a real database (jeremyevans)

* Support for schemas and aliases when eager graphing (jeremyevans)

* Handle using an SQL::Identifier as an 4th option to Dataset#join_table (jeremyevans)

* Move gem spec from Rakefile to a .gemspec file, for compatibility with gem build and builder (jeremyevans) (#285)

* Fix MSSQL 2005+ offset emulation on ruby 1.9 (jeremyevans)

* Make active_model plugin work with ActiveModel 3.0 beta Lint specs, now requires active_model (jeremyevans)

* Correctly create foreign key constraints on MySQL with the InnoDB engine, but you must specify the :key option (jeremyevans)

* Add an optimistic_locking plugin for models, similar to ActiveRecord's optimistic locking support (jeremyevans)
